<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <!-- HEADER -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="@string/which_where"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="4dp"
            android:layout_weight="0.1"
            android:text="@android:string/cancel"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/close" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp"
        android:scrollbarThumbVertical="@null">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">


            <!-- PLASTIC  CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Plastic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                app:rippleColor="#2095C6ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_weight="0"
                                app:srcCompat="@drawable/marker_plastic" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/plastic"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="7dp"
                                android:layout_weight="0.03"
                                android:tint="@color/colorPrimary"
                                app:srcCompat="@drawable/arrow_down" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:text="@string/info_plastic"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- PAPER  CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                app:rippleColor="#2095C6ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_weight="0"
                                app:srcCompat="@drawable/marker_paper" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/paper"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="7dp"
                                android:layout_weight="0.03"
                                android:tint="@color/colorPrimary"
                                app:srcCompat="@drawable/arrow_down" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:text="@string/info_paper"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <!-- GLASS  CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Glass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                app:rippleColor="#2095C6ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_weight="0"
                                app:srcCompat="@drawable/marker_glass" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/glass"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <ImageView
                                android:id="@+id/Imafe"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="7dp"
                                android:layout_weight="0.03"
                                android:tint="@color/colorPrimary"
                                app:srcCompat="@drawable/arrow_down" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:text="@string/info_glass"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- ORGANIC  CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Organic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                app:rippleColor="#2095C6ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_weight="0"
                                app:srcCompat="@drawable/marker_organic" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/organic"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="7dp"
                                android:layout_weight="0.03"
                                android:tint="@color/colorPrimary"
                                app:srcCompat="@drawable/arrow_down" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:text="@string/info_organic"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- WASTE  CARD -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Waste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                app:rippleColor="#2095C6ED">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <!-- Title, secondary and supporting text -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_weight="0"
                                app:srcCompat="@drawable/marker_restos" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/waste"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginRight="7dp"
                                android:layout_weight="0.03"
                                android:tint="@color/colorPrimary"
                                app:srcCompat="@drawable/arrow_down" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:text="@string/info_waste"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>